--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -178,6 +178,7 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]Non sei abbastanza abile da riparare il D
 Repair.Skills.AdeptGold=[[DARK_RED]]Non sei abbastanza abile da riparare l\'Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
 Repair.Skills.AdeptStone=[[DARK_RED]]Non sei abbastanza abile da riparare la Pietra.
+Repair.Skills.Adept=[[DARK_RED]]You're not skilled enough to repair {0}.
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]\u00c8 gi\u00e0 a piena durevolezza.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
