--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -178,6 +178,7 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]You\'re not skilled enough to repair Diam
 Repair.Skills.AdeptGold=[[DARK_RED]]You\'re not skilled enough to repair Gold.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
 Repair.Skills.AdeptStone=[[DARK_RED]]You\'re not skilled enough to repair Stone.
+Repair.Skills.Adept=[[DARK_RED]]You're not skilled enough to repair {0}.
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
