Change to new line in locale

--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -178,7 +178,7 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]No tienes la suficiente habilidad para re
 Repair.Skills.AdeptGold=[[DARK_RED]]No tienes la suficiente habilidad para reparar Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]No tienes la suficiente habilidad para reparar Hierro.
 Repair.Skills.AdeptStone=[[DARK_RED]]No tienes la suficiente habilidad para reparar Piedra.
-Repair.Skills.Adept=[[DARK_RED]]You're not skilled enough to repair {0}.
+Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Eso ha sido f\u00e1cil.
 Repair.Skills.FullDurability=[[GRAY]]Esto est\u00e1 nuevo.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
