--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -178,7 +178,7 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]\u0412\u044b \u043d\u0435\u0434\u043e\u04
 Repair.Skills.AdeptGold=[[DARK_RED]]\u0412\u044b \u043d\u0435\u0434\u043e\u0441\u0442\u0430\u0442\u043e\u0447\u043d\u043e \u043e\u043f\u044b\u0442\u043d\u044b, \u0447\u0442\u043e\u0431\u044b \u0447\u0438\u043d\u0438\u0442\u044c \u0437\u043e\u043b\u043e\u0442\u044b\u0435 \u0432\u0435\u0449\u0438.
 Repair.Skills.AdeptIron=[[DARK_RED]]\u0412\u044b \u043d\u0435\u0434\u043e\u0441\u0442\u0430\u0442\u043e\u0447\u043d\u043e \u043e\u043f\u044b\u0442\u043d\u044b, \u0447\u0442\u043e\u0431\u044b \u0447\u0438\u043d\u0438\u0442\u044c \u0436\u0435\u043b\u0435\u0437\u043d\u044b\u0435 \u0432\u0435\u0449\u0438.
 Repair.Skills.AdeptStone=[[DARK_RED]]\u0412\u044b \u043d\u0435\u0434\u043e\u0441\u0442\u0430\u0442\u043e\u0447\u043d\u043e \u043e\u043f\u044b\u0442\u043d\u044b, \u0447\u0442\u043e\u0431\u044b \u0447\u0438\u043d\u0438\u0442\u044c \u043a\u0430\u043c\u0435\u043d\u043d\u044b\u0435 \u0432\u0435\u0449\u0438.
-Repair.Skills.Adept=[[DARK_RED]]You're not skilled enough to repair {0}.
+Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]\u042d\u0442\u043e \u0431\u044b\u043b\u043e \u043b\u0435\u0433\u043a\u043e.
 Repair.Skills.FullDurability=[[GRAY]]\u042d\u0442\u043e \u0443\u0436\u0435 \u043c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u043f\u0440\u043e\u0447\u043d\u043e\u0441\u0442\u044c.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
