--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.08
  + Added new hidden.yml inside the jar for very sensitive config options for advanced users
  + Added option to disable Chunklets for servers which do not have doubledrops and do not care about xp farming
  + Added new "Max_Seconds" setting in config.yml to limit the max time of abilities
+ + Added new repair configs to allow customization of the repair skill
  = Fixed exploit where you could gain tons of Acrobatics XP from spamming Ender Pearls
  = Fixed normal pistons marking a block as user-placed on retract if it wasn't a sticky piston (thanks turt2live!)
  = Fixed handling of the Unbreaking enchantment so that tools are actually damaged as they should now
@@ -22,6 +23,7 @@ Version 1.3.08
  ! Added more notifications about Vampirism and Hardcore mode
  ! Changed Mining to allow Silk Touch to work again since the dupe exploit has been fixed.
  ! Changed Metrics to also report if the server uses plugin profiling
+ - Removed level and item settings from Repair skill in config.yml
 
 Version 1.3.07
  + Added ability to gain XP from custom blocks. Enable custom blocks in the config file, then enter the data in the blocks.yml file.
