--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.08
  + Added option to disable Chunklets for servers which do not have doubledrops and do not care about xp farming
  + Added new "Max_Seconds" setting in config.yml to limit the max time of abilities
  + Added new repair configs to allow customization of the repair skill
+ + Added message to inform users about hardcore mode on login
  = Fixed exploit where you could gain tons of Acrobatics XP from spamming Ender Pearls
  = Fixed normal pistons marking a block as user-placed on retract if it wasn't a sticky piston (thanks turt2live!)
  = Fixed handling of the Unbreaking enchantment so that tools are actually damaged as they should now
