--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,7 +9,7 @@ Key:
 
 Version 1.3.08
  + Added more notifications about Vampirism and Hardcore mode on player death
- + Added informative information about Hardcore mode when joining a server running Hardcore mode
+ + Added information about Hardcore mode when joining a server running Hardcore mode
  + Added new hidden.yml inside the jar for very sensitive config options for advanced users
  + Added option to disable Chunklets for servers which do not have doubledrops and do not care about xp farming
  + Added new "Max_Seconds" setting in config.yml to limit the max time of abilities
