--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.3.09
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
+ ! Changed Spout settings to be in their own config file (spout.yml)
 
 Version 1.3.08
  + Added more notifications about Vampirism and Hardcore mode on player death
