--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.09
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
  = Fixed bug where you could receive Archery XP from Potions
  = Fixed bug with duping blocks via piston pushing
+ = Fixed bug with falling sand/gravel not being tracked
  ! Changed Spout settings to be in their own config file (spout.yml)
 
 Version 1.3.08
