--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.09
+ + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
  = Fixed bug where you could receive Archery XP from Potions
  = Fixed bug with duping blocks via piston pushing
