--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.3.09
  = Fixed bug with duping blocks via piston pushing
  = Fixed bug with falling sand/gravel not being tracked
  = Fixed bug with Tree Feller not working with custom axes
+ = Fixed bug with locale strings when trying to teleport to a non-existent player.
  ! Changed Spout settings to be in their own config file (spout.yml)
 
 Version 1.3.08
