--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -36,7 +36,7 @@ Axes.Ability.Ready=[[GREEN]]**YOU READY YOUR AXE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Struck by CLEAVE!
 Axes.Combat.CritStruck=[[DARK_RED]]Du hast einen KRITISCHEN Treffer eingesteckt!
 Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
-Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
+Axes.Combat.CriticalHit=[[RED]]Kritischer Treffer!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
 Axes.Combat.GI.Struck=[[RED]]**Getroffen mit grosser Wucht**
 Axes.Combat.SS.Length=[[RED]]Sch\u00e4delspalter Dauer: [[YELLOW]]{0}s
@@ -72,9 +72,9 @@ Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Giga Drill Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Giga Drill Breaker!
-Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
+Excavation.Skillup=[[YELLOW]]Graben Fertigkeit ist um {0} gestiegen. Gesamt ({1})
 Fishing.Ability.Info=[[RED]]Magiej\u00e4ger: [[GRAY]] **Verbessert sich mit Schatzj\u00e4ger Rang**
-Fishing.Ability.Locked.0=LOCKED UNTIL 150+ SKILL (SHAKE)
+Fishing.Ability.Locked.0=Gesperrt bis Level 150+ (SHAKE)
 Fishing.Ability.Rank=[[RED]]Schatzj\u00e4ger Rang: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 Fishing.Effect.0=Schatzj\u00e4ger (Passiv)
@@ -85,7 +85,7 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
-Fishing.Listener=Fishing:
+Fishing.Listener=Angeln:
 Fishing.MagicFound=[[AQUA]]Du hast etwas magisches gefunden...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
@@ -95,7 +95,7 @@ Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
-Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
+Herbalism.Ability.GTh=[[GREEN]]**Gr\u00fcner Daumen**
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
 Herbalism.Effect.0=Green Terra (ABILITY)
@@ -113,10 +113,10 @@ Herbalism.SkillName=KR\u00c4UTERKUNDE
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra has worn off**
 Herbalism.Skills.GTe.On=[[GREEN]]**GREEN TERRA ACTIVATED**
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]ability is refreshed!
-Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
+Herbalism.Skills.GTe.Other.Off=[[RED]]Gr\u00fcner Daumen[[GREEN]] f\u00fcr [[YELLOW]]{0}[[GREEN]]ausgelaufen!
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[YELLOW]]Kr\u00e4uterkunde Fertigkeit ist um {0} gestiegen. Gesamt ({1})
-Mining.Ability.Length=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
+Mining.Ability.Length=[[RED]]Super Brecher Dauer: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
@@ -129,7 +129,7 @@ Mining.Effect.3=Verdoppelt die normale Ausbeute
 Mining.Effect.4=Blast Mining
 Mining.Effect.5=Bonuses to mining with TNT
 Mining.Effect.6=Bigger Bombs
-Mining.Effect.7=Increases TNT explosion radius
+Mining.Effect.7=Erh\u00f6hte TNT Explosionsreichweite
 Mining.Effect.8=Demolitions Expertise
 Mining.Effect.9=Decreases damage from TNT explosions
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
@@ -140,7 +140,7 @@ Mining.Skills.SuperBreaker.Off=[[RED]]**Super Breaker has worn off**
 Mining.Skills.SuperBreaker.On=[[GREEN]]**SUPER BREAKER ACTIVATED**
 Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
-Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN]]ability is refreshed!
+Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Dein [[YELLOW]]Super Brecher [[GREEN]]ist wieder bereit!
 Mining.Skillup=[[YELLOW]]Bergbau Fertigkeit ist um {0} gestiegen. Gesamt ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% ore yield
@@ -193,7 +193,7 @@ Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
 Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this item.
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
 Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
-Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
+Swords.Ability.Ready=[[GREEN]]**Du hebst dein Schwert**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
@@ -239,7 +239,7 @@ Taming.Effect.0=Beast Lore
 Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=Shock Proof
 Taming.Effect.11=Explosive Damage Reduction
-Taming.Effect.12=Call of the Wild
+Taming.Effect.12=Ruf der Wildnis
 Taming.Effect.13=Beschw\u00f6rt ein Tier an deine Seite
 Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in hand
 Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
@@ -262,7 +262,7 @@ Taming.Summon.Fail.Ocelot=[[RED]]Du hast zu viele Ozelots in deiner N\u00e4he um
 Taming.Summon.Fail.Wolf=[[RED]]Du hast zu viele W\u00f6lfe in deiner N\u00e4he um weitere zu beschw\u00f6ren.
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
-Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
+Unarmed.Ability.Bonus.1=+{0} Extra Schaden
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
@@ -280,11 +280,11 @@ Unarmed.SkillName=UNBEWAFFNET
 Unarmed.Skills.Berserk.Off=[[RED]]**Du bist nicht mehr w\u00fctend**
 Unarmed.Skills.Berserk.On=[[GREEN]]**BERSERK ACTIVATED**
 Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] has worn off for [[YELLOW]]{0}
-Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
+Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] hat [[RED]]Berserker[[DARK_GREEN]] benutzt!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability is refreshed!
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
 Woodcutting.Ability.0=Laubbl\u00e4ser
-Woodcutting.Ability.1=Blow away leaves
+Woodcutting.Ability.1=Blase Bl\u00e4tter weg
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=Gesperrt bis deine Fertigkeit 100+ erreicht hat (Laubbl\u00e4ser)
@@ -299,9 +299,9 @@ Woodcutting.SkillName=HOLZF\u00c4LLEN
 Woodcutting.Skills.TreeFeller.Off=[[RED]]**Tree Feller has worn off**
 Woodcutting.Skills.TreeFeller.On=[[GREEN]]**TREE FELLER ACTIVATED**
 Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Your [[YELLOW]]Tree Feller [[GREEN]]ability is refreshed!
-Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Tree Feller[[GREEN]] has worn off for [[YELLOW]]{0}
+Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Baumf\u00e4ller[[GREEN]] von [[YELLOW]]{0}[[GREEN]] ausgelaufen!
 Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Tree Feller!
-Woodcutting.Skills.TreeFeller.Splinter=[[RED]]YOUR AXE SPLINTERS INTO DOZENS OF PIECES!
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]Der Axt ist zersplittert
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Dieser Baum ist zu gro\u00df!
 Woodcutting.Skillup=[[YELLOW]]Holzf\u00e4llen Fertigkeit ist um {0} gestiegen. Gesamt ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
@@ -341,13 +341,13 @@ Commands.Party.Accept=[[RED]]- Gruppenanfrage annehmen
 Commands.Party.Chat.Off=Nur Gruppenchat [[RED]]Aus
 Commands.Party.Chat.On=Nur Gruppenchat [[GREEN]]An
 Commands.Party.Commands=[[GREEN]]--Gruppenkommandos--
-Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
+Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Du hast eine Partyeinladung f\u00fcr die Party {0} von {1} erhalten
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Gruppe beigetreten: {0}
 Commands.Party.Kick=Du wurdest aus der Party rausgeworfen {0}!
 Commands.Party.Leave=[[RED]]Du hast die Gruppe verlassen
-Commands.Party.Members=[[GREEN]]Party Members: {0}
+Commands.Party.Members=[[GREEN]]Party Mitglieder: {0}
 Commands.Party.None=[[RED]]Du bist nicht in einer Gruppe.
 Commands.Party.Quit=[[RED]]- Leave your current party
 Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
@@ -386,12 +386,12 @@ Party.NotInYourParty=[[DARK_RED]]{0} ist nicht in deiner Gruppe
 Party.NotOwner=[[DARK_RED]]Du bist nicht der Gruppenbesitzer
 Party.PasswordSet=[[GREEN]]Gruppenpasswort zu {0} gesetzt
 Party.Player.Invalid=[[RED]]That is not a valid player.
-Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
+Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu einem toten Spieler hinteleportieren.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
-Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
+Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir hin teleportiert
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
-Commands.XPGain.Acrobatics=Falling
+Commands.XPGain.Acrobatics=Fallen
 Commands.XPGain.Archery=Monster angreifen
 Commands.XPGain.Axes=Monster angreifen
 Commands.XPGain.Excavation=Graben und Sch\u00e4tze finden
