--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.09
+ + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
  + Added API for plugins to add custom tools directly via Spout
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
