--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,7 +10,7 @@ Key:
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
- + Added API for plugins to add custom tools directly via Spout
+ + Added API for plugins to add custom tools directly via Spout - repair / abilities do not work ATM
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
  = Fixed bug where you could receive Archery XP from Potions
  = Fixed bug with duping blocks via piston pushing
