--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ Version 1.3.09
  = Fixed bug with locale strings when trying to teleport to a non-existent player
  = Fixed bug with Tree Feller changing durability before checking for axe splintering
  = Fixed bug with Repair Mastery permission due to typo
+ ! API methods can now only be used in a static way
  ! Changed Spout settings to be in their own config file (spout.yml)
 
 Version 1.3.08
