--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
  + Added API for plugins to add custom tools directly via Spout - repair / abilities do not work ATM
+ + Added offline party members to the list displayed by /party
  = Fixed /mcremove being applied only after a reload
  = Fixed Archery PVE disablement not working properly
  = Fixed possible NPE when a projectile is shot by a dispenser or doesn't have any shooter
@@ -25,6 +26,7 @@ Version 1.3.09
  = Fixed bug with repairing items that use metadata
  ! API methods can now only be used in a static way
  ! Changed Spout settings to be in their own config file (spout.yml)
+ ! Changed file format for parties (parties.yml), previous files are no longer used
 
 Version 1.3.08
  + Added more notifications about Vampirism and Hardcore mode on player death
