--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.3.09
  = Fixed Archery PVE disablement not working properly
  = Fixed possible NPE when a projectile is shot by a dispenser or doesn't have any shooter
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
+ = Fixed very small possible memory leak concerning Archery
  = Fixed bug where you could receive Archery XP from Potions
  = Fixed bug where Chunklets for the < 64 y coordinates would not be properly loaded
  = Fixed bug with duping blocks via piston pushing
@@ -29,6 +30,7 @@ Version 1.3.09
  = Fixed bug with Repair Mastery permission due to typo
  = Fixed bug with repairing items that use metadata
  ! API methods can now only be used in a static way
+ ! Arrows shot from a bow having the Infitity enchantment can no longer be retrieved
  ! Changed Spout settings to be in their own config file (spout.yml)
  ! Changed file format for parties (parties.yml), previous files are no longer used
  ! Changed mcMMO to inform on corrupt Chunklets and make new ones
