--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
+ + Added reduced cooldown permission nodes as donor perks (1/4, 1/3, 1/2 cooldown)
  + Added API for plugins to add custom tools directly via Spout - repair / abilities do not work ATM
  + Added offline party members to the list displayed by /party
  + Added possibility to kick offline members from parties
@@ -30,6 +31,7 @@ Version 1.3.09
  = Fixed bug with Repair Mastery permission due to typo
  = Fixed bug with repairing items that use metadata
  = Fixed bug with Chunklets not being reloaded on /reload
+ = Fixed possible NPE when falling with no item in hand
  ! API methods can now only be used in a static way
  ! Arrows shot from a bow having the Infitity enchantment can no longer be retrieved
  ! Changed Spout settings to be in their own config file (spout.yml)
